--- a/detected-bugs/RFC9224-1.md
+++ b/detected-bugs/RFC9224-1.md
@@ -2,6 +2,7 @@
 
 - [RFC 9224 - Finding the Authoritative Registration Data Access Protocol (RDAP) Service](https://www.rfc-editor.org/rfc/rfc9224)
 - **Category**: (U-2) Direct under-specification (incomplete constraints)
+- **Status**: Pending
 
 Excerpt (from the IPv4 example in Section 5.1):
  “For example, a query for ‘192.0.2.1/25’ matches the ‘192.0.0.0/8’ entry and the ‘192.0.2.0/24’ entry in the example registry above. The latter is chosen by the client because it is the longest match.”
