--- a/detected-bugs/RFC9224-2.md
+++ b/detected-bugs/RFC9224-2.md
@@ -2,7 +2,7 @@
 
 - [RFC 9224 - Finding the Authoritative Registration Data Access Protocol (RDAP) Service](https://www.rfc-editor.org/rfc/rfc9224)
 - **Category**: (U-3) Indirect under-specification
-- **Confirmed by authors.**
+- **Status**: Confirmed by authors.
 
 Excerpt from Section 5:
  “For IP address space, the authoritative registration data service is found by doing a longest match of the target address with the values of the arrays in the corresponding RDAP Bootstrap Service Registry for Address Space. The longest match is done the same way as in packet forwarding: the addresses are converted in binary form and then the binary strings are compared to find the longest match up to the specified prefix length.”
