--- a/detected-bugs/RFC9224-3.md
+++ b/detected-bugs/RFC9224-3.md
@@ -2,6 +2,7 @@
 
 - [RFC 9224 - Finding the Authoritative Registration Data Access Protocol (RDAP) Service](https://www.rfc-editor.org/rfc/rfc9224)
 - **Category**: (U-3) Indirect under-specification
+- **Status**: Pending
 
 Relevant Excerpt from Section 5.1 (IPv4 Example):  
  “For example, a query for "192.0.2.1/25" matches the "192.0.0.0/8" entry and the "192.0.2.0/24" entry in the example registry above. The latter is chosen by the client because it is the longest match. The base RDAP URL for this query is then taken from the second element of the array, which is an array of base RDAP URLs valid for this entry. The client chooses one of the base URLs from this array; in this example, it chooses the only one available, "https://example.org/". The {resource} specified in [RFC9082] is then appended to the base URL to complete the query. The complete query is then "https://example.org/ip/192.0.2.1/25".”
