--- a/detected-bugs/RFC9445.md
+++ b/detected-bugs/RFC9445.md
@@ -2,7 +2,7 @@
 
 - [RFC 9445 - RADIUS Extensions for DHCP-Configured Services](https://www.rfc-editor.org/rfc/rfc9445)
 - **Category**: (I-2) Indirect inconsistency
-- **Confirmed by authors and submission to the IETF Errata portal verified.**
+- **Status**: Verified on the IETF Errata portal.
 
 Excerpt from Section 7:
 ```
