--- a/detected-bugs/RFC9460-2.md
+++ b/detected-bugs/RFC9460-2.md
@@ -2,6 +2,7 @@
 
 - [RFC 9460 - Service Binding and Parameter Specification via the DNS (SVCB and HTTPS Resource Records)](https://www.rfc-editor.org/rfc/rfc9460)
 - **Category**: (I-1) Direct inconsistency
+- **Status**: Pending
 
 Excerpt from Section 9:
  “… To enable special handling for HTTP use cases, the HTTPS RR type is defined as a SVCB‐compatible RR type, specific to the ‘https’ and ‘http’ schemes. Clients MUST NOT perform SVCB queries or accept SVCB responses for ‘https’ or ‘http’ schemes.”
