--- a/detected-bugs/RFC9460-3.md
+++ b/detected-bugs/RFC9460-3.md
@@ -2,7 +2,7 @@
 
 - [RFC 9460 - Service Binding and Parameter Specification via the DNS (SVCB and HTTPS Resource Records)](https://www.rfc-editor.org/rfc/rfc9460)
 - **Category**: (U-4) Incorrect/missing references
-- **Confirmed by authors.**
+- **Status**: Confirmed by authors.
 
 Excerpt from Section 3:
   “3. If an AliasMode SVCB record is returned for $QNAME (after following CNAMEs as normal), set $QNAME to its TargetName (without additional prefixes) and loop back to Step 2, subject to chain length limits and loop detection heuristics (see Section 3.1).”
