--- a/detected-bugs/RFC9461.md
+++ b/detected-bugs/RFC9461.md
@@ -2,6 +2,7 @@
 
 - [RFC 9461 - Service Binding Mapping for DNS Servers](https://www.rfc-editor.org/rfc/rfc9461)
 - **Category**: (U-1) Direct under-specification (undefined terms)
+- **Status**: Awaiting response from authors.
 
  Appendix A, Table 3 of RFC 9461  
   Excerpt (“Required keys” row):  
