--- a/detected-bugs/RFC9462.md
+++ b/detected-bugs/RFC9462.md
@@ -2,6 +2,7 @@
 
 - [RFC 9462 - Discovery of Designated Resolvers](https://www.rfc-editor.org/rfc/rfc9462)
 - **Category**: (I-1) Direct inconsistency
+- **Status**: Pending
 
 Excerpts from section 3:
 
