--- a/detected-bugs/RFC9463.md
+++ b/detected-bugs/RFC9463.md
@@ -2,6 +2,7 @@
 
 - [RFC 9463 - DHCP and Router Advertisement Options for the Discovery of Network‐designated Resolvers (DNR)](https://www.rfc-editor.org/rfc/rfc9463)
 - **Category**: (U-3) Indirect under-specification
+- **Status**: Pending
 
 Excerpt (from Figure 7 and accompanying text) from Section 6.1:
    "Length:  8-bit unsigned integer.  The length of the option (including
