--- a/detected-bugs/RFC9464.md
+++ b/detected-bugs/RFC9464.md
@@ -2,7 +2,7 @@
 
 - [RFC 9464 - Internet Key Exchange Protocol Version 2 (IKEv2) Configuration for Encrypted DNS](https://www.rfc-editor.org/rfc/rfc9464)
 - **Category**: (I-1) Direct inconsistency
-- **Confirmed by authors.**
+- **Status**: Confirmed by authors.
 
 Detailed Description of the Issue:  
 The specification defines the ENCDNS_DIGEST_INFO attribute as follows:  
