--- a/detected-bugs/RFC9471.md
+++ b/detected-bugs/RFC9471.md
@@ -2,7 +2,7 @@
 
 - [RFC 9471 - DNS Glue Requirements in Referral Responses](https://www.rfc-editor.org/rfc/rfc9471)
 - **Category**: (U-2) Direct under-specification (incomplete constraints)
-- **Confirmed by authors.**
+- **Status**: Confirmed by authors.
 
 Excerpt from Section 2.3:  
   “The use of sibling domain name servers can introduce cyclic dependencies. This happens when one domain specifies name servers from a sibling domain, and vice versa. This type of cyclic dependency can only be broken when the delegating name server includes glue for the sibling domain in a referral response.”
