--- a/detected-bugs/RFC9527-3.md
+++ b/detected-bugs/RFC9527-3.md
@@ -2,6 +2,7 @@
 
 - [RFC 9527 - DHCPv6 Options for the Homenet Naming Authority](https://www.rfc-editor.org/rfc/rfc9527)
 - **Category**: (I-2) Indirect inconsistency
+- **Status**: Awaiting response from authors.
 
 Excerpt from Section 4.3:  
   "The Reverse Distribution Manager Option (OPTION_REVERSE_DIST_MANAGER) provides the HNA with the FQDN of the DM as well as the transport protocols for the communication between the HNA and the DM."
