--- a/detected-bugs/RFC9527-4.md
+++ b/detected-bugs/RFC9527-4.md
@@ -2,6 +2,7 @@
 
 - [RFC 9527 - DHCPv6 Options for the Homenet Naming Authority](https://www.rfc-editor.org/rfc/rfc9527)
 - **Category**: (I-2) Indirect inconsistency
+- **Status**: Awaiting response from authors.
 
 Excerpts from Section 1:
  • Paragraph 2 states:  
