--- a/detected-bugs/RFC9567-1.md
+++ b/detected-bugs/RFC9567-1.md
@@ -2,6 +2,7 @@
 
 - [RFC 9567 - DNS Error Reporting](https://www.rfc-editor.org/rfc/rfc9567)
 - **Category**: (I-3) Inconsistency with common knowledge
+- **Status**: Pending
 
 Excerpts from the RFC Section 1:
  “When an authoritative server serves a stale DNSSEC‑signed zone, the
