--- a/detected-bugs/RFC9567-2.md
+++ b/detected-bugs/RFC9567-2.md
@@ -2,6 +2,7 @@
 
 - [RFC 9567 - DNS Error Reporting](https://www.rfc-editor.org/rfc/rfc9567)
 - **Category**: (U-2) Direct under-specification (incomplete constraints)
+- **Status**: Pending
   
 Excerpt from Section 6.1.1:
   "... The QTYPE that was used in the query that resulted in the extended DNS error, presented as a decimal value, in a single DNS label. If additional QTYPEs were present in the query, such as described in [MULTI-QTYPES ], they are represented as unique, ordered decimal values separated by a hyphen. As an example, if both QTYPE A and AAAA were present in the query, they are presented as the label '1-28'."  
