--- a/detected-bugs/RFC9606.md
+++ b/detected-bugs/RFC9606.md
@@ -2,6 +2,7 @@
 
 - [RFC 9606 - DNS Resolver Information](https://www.rfc-editor.org/rfc/rfc9606)
 - **Category**: (U-1) Direct under-specification (undefined terms)
+- **Status**: Pending
 
 Excerpt from Section 3:
  “If a group of resolvers is sharing the same ADN and/or anycast address, then these instances SHOULD expose a consistent RESINFO.”
