--- a/detected-bugs/RFC9619.md
+++ b/detected-bugs/RFC9619.md
@@ -2,7 +2,7 @@
 
 - [RFC 9619 - In the DNS, QDCOUNT Is (Usually) One](https://www.rfc-editor.org/rfc/rfc9619)
 - **Category**: (I-2) Indirect inconsistency
-- **Confirmed by authors and submission to the IETF Errata portal verified.**
+- **Status**: Verified on the IETF Errata portal.
 
 Excerpt from Section 1:
   “…update the DNS base specification to clarify the allowable values of the QDCODE parameter in the specific case of DNS messages with OPCODE = 0.”
