--- a/detected-bugs/RFC9704-2.md
+++ b/detected-bugs/RFC9704-2.md
@@ -2,6 +2,7 @@
 
 - [RFC 9704 - Establishing Local DNS Authority in Validated Split-Horizon Environments](https://www.rfc-editor.org/rfc/rfc9704)
 - **Category**: (U-1) Direct under-specification (undefined terms)
+- **Status**: Pending
 
 Excerpt from Section 3:
  “The protocol is applicable to any type of network offering split‐horizon DNS configuration.  
