--- a/detected-bugs/RFC9704-3.md
+++ b/detected-bugs/RFC9704-3.md
@@ -2,6 +2,7 @@
 
 - [RFC 9704 - Establishing Local DNS Authority in Validated Split-Horizon Environments](https://www.rfc-editor.org/rfc/rfc9704)
 - **Category**: (I-3) Inconsistency with common knowledge
+- **Status**: Pending
 
 Excerpt from Section 1:  
  “To resolve a DNS query, there are three main behaviors that an
