--- a/detected-bugs/RFC9704-5.md
+++ b/detected-bugs/RFC9704-5.md
@@ -2,6 +2,7 @@
 
 - [RFC 9704 - Establishing Local DNS Authority in Validated Split-Horizon Environments](https://www.rfc-editor.org/rfc/rfc9704)
 - **Category**: (I-2) Indirect inconsistency
+- **Status**: Pending
 
 Sections Affected:
   • Section 5.1 (“Example”) – The authorization claim example lists:
