--- a/detected-bugs/RFC9157-2.md
+++ b/detected-bugs/RFC9157-2.md
@@ -2,6 +2,7 @@
 
 - [RFC 9157 - Revised IANA Considerations for DNSSEC](https://www.rfc-editor.org/rfc/rfc9157)
 - **Category**: (I-2) Indirect inconsistency
+- **Status**: Pending
 
 Excerpt from Section 2:  
   “…by allowing any DS hash algorithms, NSEC3 hash algorithms, NSEC3 parameters, and NSEC3 flags that are fully described in an RFC to have identifiers assigned in the IANA registries…”
