--- a/detected-bugs/RFC9224-5.md
+++ b/detected-bugs/RFC9224-5.md
@@ -2,6 +2,7 @@
 
 - [RFC 9224 - Finding the Authoritative Registration Data Access Protocol (RDAP) Service](https://www.rfc-editor.org/rfc/rfc9224)
 - **Category**: (U-1) Direct under-specification (undefined terms)
+- **Status**: Pending
 
 Excerpt from Section 9:  
   “…queries using search patterns that do not contain a terminating  
