--- a/detected-bugs/RFC9224-6.md
+++ b/detected-bugs/RFC9224-6.md
@@ -2,6 +2,7 @@
 
 - [RFC 9224 - Finding the Authoritative Registration Data Access Protocol (RDAP) Service](https://www.rfc-editor.org/rfc/rfc9224)
 - **Category**: (U-3) Indirect under-specification
+- **Status**: Pending
 
 Excerpt from Section 10.2:
   version:  a MEMBER with MEMBER-NAME "version" and MEMBER-VALUE a STRING
