--- a/detected-bugs/RFC9460-1.md
+++ b/detected-bugs/RFC9460-1.md
@@ -2,6 +2,7 @@
 
 - [RFC 9460 - Service Binding and Parameter Specification via the DNS (SVCB and HTTPS Resource Records)](https://www.rfc-editor.org/rfc/rfc9460)
 - **Category**: (I-1) Direct inconsistency
+- **Status**: Pending
 
 Excerpt from Appendix A:
 ```
