--- a/detected-bugs/RFC9527-5.md
+++ b/detected-bugs/RFC9527-5.md
@@ -2,6 +2,7 @@
 
 - [RFC 9527 - DHCPv6 Options for the Homenet Naming Authority](https://www.rfc-editor.org/rfc/rfc9527)
 - **Category**: (I-2) Indirect inconsistency
+- **Status**: Pending
 
 Excerpts from Section 3:
  “The HNA is willing to outsource the Public Homenet Zone or  
