--- a/detected-bugs/RFC9704-4.md
+++ b/detected-bugs/RFC9704-4.md
@@ -2,6 +2,7 @@
 
 - [RFC 9704 - Establishing Local DNS Authority in Validated Split-Horizon Environments](https://www.rfc-editor.org/rfc/rfc9704)
 - **Category**: (I-1) Direct inconsistency
+- **Status**: Pending
 
 Excerpt from Section 8:
  {
